[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/Fonts/ButtonFont.tres" type="DynamicFont" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreText" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 50.0

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -43.0
margin_right = 181.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -239.0
margin_right = 100.0
margin_bottom = -190.0
custom_fonts/font = ExtResource( 3 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -178.0
margin_right = 100.0
margin_bottom = -129.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
